# sas2py_haver

./: .gitignore  CLAUDE.md  Federal_Reserve_ETL_Interactive.ipynb  MANIFEST.in  README.md  extract_fed_data.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
0xcc/adrs/: 000_PADR|federal-reserve-etl.md
0xcc/instruct/: 000_README.md  001_create-project-prd.md  002_create-adr.md  003_create-feature-prd.md  004_create-tdd.md  005_create-tid.md  006_generate-tasks.md  007_process-task-list.md  008_housekeeping.md
0xcc/prds/: 000_PPRD|federal-reserve-etl.md  001_FPRD|DualSourceDataExtraction.md  002_FPRD|ComprehensiveErrorHandling.md  003_FPRD|ConfigurationManagement.md  004_FPRD|StructuredLoggingMonitoring.md  005_FPRD|IntegrationTestingSuite.md
0xcc/spec/: 001_SPEC|APISpecification.md
0xcc/tasks/: 001_FTASKS|DualSourceDataExtraction.md  002_FTASKS|ComprehensiveErrorHandling.md  003_FTASKS|ConfigurationManagement.md  004_FTASKS|StructuredLoggingMonitoring.md  005_FTASKS|IntegrationTestingSuite.md
0xcc/tdds/: 001_FTDD|DualSourceDataExtraction.md  002_FTDD|ComprehensiveErrorHandling.md  003_FTDD|ConfigurationManagement.md  004_FTDD|StructuredLoggingMonitoring.md  005_FTDD|IntegrationTestingSuite.md
0xcc/tids/: 001_FTID|DualSourceDataExtraction.md  002_FTID|ComprehensiveErrorHandling.md  003_FTID|ConfigurationManagement.md  004_FTID|StructuredLoggingMonitoring.md  005_FTID|IntegrationTestingSuite.md
docs/: API_CREDENTIALS_SETUP.md  API_REFERENCE.md  TROUBLESHOOTING.md
examples/: README.md  advanced_integration.py  basic_usage.py  docker_deployment.py
src/federal_reserve_etl/: __init__.py  config.py
src/federal_reserve_etl/data_sources/: __init__.py  base.py  fred_client.py  haver_client.py
src/federal_reserve_etl/date_management/: __init__.py
src/federal_reserve_etl/exporters/: __init__.py
src/federal_reserve_etl/transformers/: __init__.py
src/federal_reserve_etl/utils/: __init__.py  docstring_standards.py  error_handling.py  exceptions.py  logging.py  type_definitions.py
src/federal_reserve_etl/validators/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: test_fred_api_connectivity.py
tests/unit/: test_base_data_source.py  test_end_to_end_workflow.py  test_exceptions.py  test_factory_pattern.py  test_fred_client.py  test_haver_client.py
